--- a/flxgrid.scss
+++ b/flxgrid.scss
@@ -10,79 +10,129 @@ $responsive-sizes:(
   "xs":("max-width": $xs),
   "ps":("max-width": $ps)
 );
+$orientations: "left" "right";
 $columns:12;
+.row {
+  box-sizing: border-box;
+  display: flex;
+  flex: 0 1 auto;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-right: -0.5rem;
+  margin-left: -0.5rem;
+}
+.a{
+  background: blue;
+}
+.b{
+  background: tomato;
+}
+.c{
+  background: #333;
+}
+.d{
+  background: green;
+}
+.e{
+  background: mediumseagreen;
+}
 @mixin rowalign($align) {
-  -webkit-box-pack: $align;
-  -ms-flex-pack: $align;
   justify-content: $align;
 }
 @mixin colalign($align) {
-  -webkit-box-align: $align;
-  -ms-flex-align: $align;
   align-items: $align;
 }
-@mixin name {
-
-}
-@mixin rowalignment {
-  .start{
-    @include rowalign(start);
+@mixin rowalignment($size) {
+  @if ($size == default){
+    .start{
+      @include rowalign(flex-start);
+    }
+    .center{
+      @include rowalign(center);
+    }
+    .end{
+      @include rowalign(flex-end);
+    }
+    .top{
+      @include colalign(flex-start);
+    }
+    .middle{
+      @include colalign(center);
+    }
+    .bottom{
+      @include colalign(flex-end);
+    }
+    .around{
+      @include rowalign(space-around);
+    }
+    .between{
+      @include rowalign(space-between);
+    }
+  } @else {
+      .start-#{$size}{
+        @include rowalign(flex-start);
+      }
+      .center-#{$size}{
+        @include rowalign(center);
+      }
+      .end-#{$size}{
+        @include rowalign(flex-end);
+      }
+      .top-#{$size}{
+        @include colalign(flex-start);
+      }
+      .middle-#{$size}{
+        @include colalign(center);
+      }
+      .bottom-#{$size}{
+        @include colalign(flex-end);
+      }
+      .around-#{$size}{
+        @include rowalign(space-around);
+      }
+      .between-#{$size}{
+        @include rowalign(space-between);
+      }
+    }
   }
-  .center{
-    @include rowalign(center);
-  }
-  .end{
-    @include rowalign(end);
-  }
-  .top{
-    @include colalign(flex-start);
-  }
-  .middle{
-    @include colalign(center);
-  }
-  .bottom{
-    @include colalign(flex-end);
-  }
-  .around{
-    @include rowalign(space-around);
-  }
-  .between{
-    @include rowalign(space-between);
-  }
-}
 
 @each $key, $value in $responsive-sizes {
   @if ($key == default){
     $min-width: map-get($value, "min-width");
     @media screen and (min-width: $min-width) {
-      @include rowalignment;
+      @include rowalignment(default);
       @for $i from 1 through $columns {
-        .col-#{$i} {
+        .col--#{$i} {
           -ms-flex-preferred-size: (100%/12*$i);
           flex-basis: (100%/12*$i);
           max-width: (100%/12*$i);
         }
     }
-    @for $i from 1 through $columns {
-      .col-off-left-#{$i} {
-        margin-left: (100%/12*$i);
-      }
-    }
-    @for $i from 1 through $columns {
-      .col-off-right-#{$i} {
-        margin-left: (100%/12*$i);
+    @each $orient in $orientations{
+      @for $i from 1 through $columns {
+        .col-off--#{$orient}--#{$i} {
+         margin-left: (100%/12*$i);
+        }
       }
     }
   }
   }@else{
     $max-width: map-get($value, "max-width");
     @media screen and (max-width: $max-width) {
+      @include rowalignment($key);
       @for $i from 1 through $columns {
-        .col-#{$key}-#{$i} {
+        .col--#{$key}--#{$i} {
           -ms-flex-preferred-size: (100%/12*$i);
           flex-basis: (100%/12*$i);
           max-width: (100%/12*$i);
         }
+    }
+    @each $orient in $orientations{
+      @for $i from 1 through $columns {
+        .col-off--#{$key}--#{$orient}--#{$i} {
+         margin-left: (100%/12*$i);
+        }
+      }
     }
     }
   }
